fix Maven icon on mobile size

--- a/src/styles/_List.scss
+++ b/src/styles/_List.scss
@@ -57,11 +57,11 @@
 .list-letter {
   display: inline-block;
   height: 40px;
-  width: 40px;
+  min-width: 40px;
   margin-right: 20px;
   line-height: 40px;
   text-align: center;
-  border-radius: 40px;
+  border-radius: 50%;
   color: white;
   background-color: green;
   font-size: 1.5em;
